app/src/main/java/com/example/empattesttask/common/utils/result/error/CustomError.kt
package com.example.empattesttask.common.utils.result.error

data class CustomError(
    val errorCode: Int,
    val message: String
)